infisical/Ingress.infisical-ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical-ingress
  namespace: infisical
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: infisical-infisical-standalone-infisical
                port:
                  number: 8080
            path: /
            pathType: Prefix
          - backend:
              service:
                name: infisical-infisical-standalone-infisical
                port:
                  number: 8080
            path: /ss-webhook
            pathType: Exact
